--- a/CleanNotesApp/Base.lproj/Main.storyboard
+++ b/CleanNotesApp/Base.lproj/Main.storyboard
@@ -1,24 +1,112 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kp4-mY-2U2">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="zU6-fR-WFr">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController id="kp4-mY-2U2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="URc-fv-ex0">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hvu-it-hqv" kind="relationship" relationship="rootViewController" id="iWi-NR-mKN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5He-qY-rV2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-554" y="-149"/>
+        </scene>
+        <!--Notes-->
+        <scene sceneID="3m6-fi-YMk">
+            <objects>
+                <viewController id="hvu-it-hqv" customClass="NotesListViewController" customModule="CleanNotesApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="V2U-ET-EFc">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RfM-Yi-T9a">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="noteCell" rowHeight="100" id="vDS-f1-gZm" customClass="NoteCell" customModule="CleanNotesApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vDS-f1-gZm" id="6Ls-wY-gau">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EEc-I3-mVn">
+                                                    <rect key="frame" x="20" y="11.000000000000002" width="353" height="27.666666666666671"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hay-i2-e1O">
+                                                    <rect key="frame" x="26" y="58.666666666666657" width="36" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJ3-nY-iuV">
+                                                    <rect key="frame" x="77" y="58.666666666666664" width="296" height="21.333333333333336"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="QJ3-nY-iuV" firstAttribute="top" secondItem="EEc-I3-mVn" secondAttribute="bottom" constant="20" id="6f5-4V-lwO"/>
+                                                <constraint firstItem="EEc-I3-mVn" firstAttribute="top" secondItem="6Ls-wY-gau" secondAttribute="topMargin" id="N9u-Em-WZk"/>
+                                                <constraint firstItem="Hay-i2-e1O" firstAttribute="top" secondItem="EEc-I3-mVn" secondAttribute="bottom" constant="20" id="OSJ-GO-vb9"/>
+                                                <constraint firstAttribute="trailing" secondItem="Hay-i2-e1O" secondAttribute="trailing" constant="331" id="QYL-lN-Pcx"/>
+                                                <constraint firstItem="EEc-I3-mVn" firstAttribute="leading" secondItem="6Ls-wY-gau" secondAttribute="leadingMargin" id="Xnx-vY-lvE"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="QJ3-nY-iuV" secondAttribute="bottom" constant="9" id="fYP-fo-bOC"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="EEc-I3-mVn" secondAttribute="trailing" id="iBZ-VU-Ty4"/>
+                                                <constraint firstItem="QJ3-nY-iuV" firstAttribute="leading" secondItem="Hay-i2-e1O" secondAttribute="trailing" constant="15" id="isx-ik-7gW"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="QJ3-nY-iuV" secondAttribute="trailing" id="qLK-XT-mQL"/>
+                                                <constraint firstItem="Hay-i2-e1O" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Ls-wY-gau" secondAttribute="leadingMargin" id="tmw-mg-c9l"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="bodyLabel" destination="QJ3-nY-iuV" id="g1A-6e-bXv"/>
+                                            <outlet property="dateLabel" destination="Hay-i2-e1O" id="N1i-dr-6zL"/>
+                                            <outlet property="titleLabel" destination="EEc-I3-mVn" id="eUt-cT-qBD"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="hvu-it-hqv" id="LCm-e3-u5G"/>
+                                    <outlet property="delegate" destination="hvu-it-hqv" id="qKg-h3-mzJ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="RYT-cC-Olx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="RYT-cC-Olx" firstAttribute="trailing" secondItem="RfM-Yi-T9a" secondAttribute="trailing" id="MJB-AO-9Sw"/>
+                            <constraint firstItem="RYT-cC-Olx" firstAttribute="bottom" secondItem="RfM-Yi-T9a" secondAttribute="bottom" id="XcC-HO-mjl"/>
+                            <constraint firstItem="RfM-Yi-T9a" firstAttribute="top" secondItem="RYT-cC-Olx" secondAttribute="top" id="iY9-os-5ZW"/>
+                            <constraint firstItem="RfM-Yi-T9a" firstAttribute="leading" secondItem="RYT-cC-Olx" secondAttribute="leading" id="lDV-5W-ROY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Notes" id="7P0-Oj-MY1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OHY-YI-rk1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="255.72519083969465" y="-149.29577464788733"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
